--- a/app.json
+++ b/app.json
@@ -15,7 +15,17 @@
       "description": "Worktype of your bot. Use public/private, if private then only bot number can use it. If public then everyone can use it.",
       "value": "private",
       "required": "true"
-     },
+      },
+    "AUTO_REACT": {
+      "description": "TRUE OR FALSE",
+      "value": "true",
+      "required": "true"
+    },
+    "OWNER_REACT": {
+      "description": "true or false",
+      "value": "true",
+      "required": "true"
+    },
     "PREFIX": {
       "description": "Enter your desired prefix for bot. you can set `all | . | .!*`",
       "value": ".",
